# Freematics_GUI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.device.yml  docker-compose.dns.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-firmware.yml  release.yml
docs/: user-guide.md
firmware/: Dockerfile  README.md  build.sh  copy_artifact.sh
firmware/overlay/: configstore.cpp  configstore.h  dataserver.cpp  platformio.ini  serial_handler.cpp  serial_handler.h  teleclient.cpp  (+3 more)
plans/: freematics-config-manager-complete.md  freematics-config-manager-phase-1-complete.md  freematics-config-manager-phase-2-complete.md  freematics-config-manager-phase-3-complete.md  freematics-config-manager-phase-4-complete.md  freematics-config-manager-phase-5-complete.md  freematics-config-manager-phase-6-complete.md  freematics-config-manager-phase-7-complete.md  freematics-config-manager-phase-8-complete.md  freematics-config-manager-phase-9-complete.md  freematics-config-manager-plan.md
scripts/: gen_icon.py  smoke_test_appimage.sh
src/: main.test.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/backup/: export.rs  import.rs  mod.rs  schema.rs
src-tauri/src/flash/: esptool.rs  mod.rs  native.rs
src-tauri/src/protocol/: client.rs  commands.rs  mod.rs  types.rs
src-tauri/src/usb/: detector.rs  mod.rs  serial_port.rs
src-tauri/tests/: e2e.rs  project_layout.rs
(+30 files in other folders)
