[package]
name = "freematics-config-manager"
version = "0.1.0"
description = "Freematics Config Manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
nusb = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
